--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   -->
         <link
             rel="shortcut icon"
-            href="./assets/images/logo.ico"
+            href="./assets/images/logo3.png"
             type="image/x-icon"
         />
 
