Script connection fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </figure>
 
                     <div class="info-content">
-                        <h1 class="name" title="Richard hanrick">Neave Paul</h1>
+                        <h1 class="name" title="Neave    Paul">Neave Paul</h1>
 
                         <p class="title">Software Developer</p>
                     </div>
@@ -901,7 +901,7 @@
 
                         <div class="filter-select-box">
                             <button class="filter-select" data-select>
-                                <div class="select-value" data-selecct-value>
+                                <div class="select-value" data-select-value>
                                     Select category
                                 </div>
 
@@ -1620,11 +1620,6 @@
                 </article>
             </div>
         </main>
-
-        <!--
-    - custom js link
-  -->
-        <script src="./assets/js/script.js"></script>
 
         <!--
     - ionicon link
