--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                                         <img
                                             src="./assets/images/icon-tech.svg"
                                             alt="technology"
-                                            class="testimonials-avatar"
+                                            width="60"
                                             data-testimonials-avatar
                                         />
                                     </figure>
@@ -655,7 +655,7 @@
                                         <img
                                             src="./assets/images/icon-ml.svg"
                                             alt="ai"
-                                            class="testimonials-avatar"
+                                            width="60"
                                             data-testimonials-avatar
                                         />
                                     </figure>
@@ -690,7 +690,7 @@
                                         <img
                                             src="./assets/images/icon-music.svg"
                                             alt="Music note"
-                                            class="testimonials-avatar"
+                                            width="60"
                                             data-testimonials-avatar
                                         />
                                     </figure>
@@ -759,7 +759,7 @@
                                         <img
                                             src="./assets/images/icon-robo.svg"
                                             alt="Robotics"
-                                            class="testimonials-avatar"
+                                            width="60"
                                             data-testimonials-avatar
                                         />
                                     </figure>
@@ -793,7 +793,7 @@
                                         <img
                                             src="./assets/images/icon-foot.svg"
                                             alt="football"
-                                            class="testimonials-avatar"
+                                            width="60"
                                             data-testimonials-avatar
                                         />
                                     </figure>
@@ -828,7 +828,7 @@
                                         <img
                                             src="./assets/images/icon-car.svg"
                                             alt="automobiles"
-                                            class="testimonials-avatar"
+                                            width="60"
                                             data-testimonials-avatar
                                         />
                                     </figure>
