remove wrong link

--- a/index.html
+++ b/index.html
@@ -1472,9 +1472,7 @@
                             </li>
 
                             <li class="blog-post-item">
-                                <a
-                                    href="https://ieeexplore.ieee.org/abstract/document/10306584"
-                                >
+                                <a href="#">
                                     <figure class="blog-banner-box">
                                         <img
                                             src="./assets/images/logo-AlXAImers-big.png"
