Added publication link

--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
                         <ul class="blog-posts-list">
                             <li class="blog-post-item">
                                 <a
-                                    href="https://ieeexplore.ieee.org/abstract/document/10306584"
+                                    href="https://ieeexplore.ieee.org/document/10306584"
                                 >
                                     <figure class="blog-banner-box">
                                         <img
@@ -1472,7 +1472,9 @@
                             </li>
 
                             <li class="blog-post-item">
-                                <a href="#">
+                                <a
+                                    href="https://ieeexplore.ieee.org/document/10493489"
+                                >
                                     <figure class="blog-banner-box">
                                         <img
                                             src="./assets/images/logo-AlXAImers-big.png"
